Added the web theme.

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,13 @@
             crossorigin="anonymous"
     />
 
-    <title>React App</title>
+    <title>GPG Speaker: Encrypt/Decrypt GPG Symmetrically</title>
+    <style>
+body {
+    background: url('singularity.jpg') center fixed no-repeat;
+    color: white;
+}
+    </style>
 </head>
 <body>
 <noscript>
