Added the Twitter and FB OpenGraph tags.

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,20 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <title>GPG Speaker: Encrypt/Decrypt GPG Symmetrically</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
+    <meta name="viewport"            content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="theme-color"         content="#000000">
+
+    <meta name="twitter:card"        content="summary_large_image" />
+    <meta name="twitter:creator"     content="@hopeseekr" />
+    <meta name="twitter:title"       content="opengpg.zpf.io Secret Messages" />
+    <meta name="twitter:description" content="Symmetrical PGP for the masses! An easy way to share secret messages with one another." />
+    <meta name="twitter:image"       content="https://opengpg.zpf.io/screenshot.jpg" />
+    <meta name="og:title"            content="opengpg.zpf.io Secret Messages" />
+    <meta name="og:description"      content="Symmetrical PGP for the masses! An easy way to share secret messages with one another." />
+    <meta name="og:image"            content="https://opengpg.zpf.io/screenshot.jpg" />
+
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -18,8 +29,6 @@
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
             crossorigin="anonymous"
     />
-
-    <title>GPG Speaker: Encrypt/Decrypt GPG Symmetrically</title>
     <style>
 body {
     background: url('singularity.jpg') center fixed no-repeat;
